--- a/careers.html
+++ b/careers.html
@@ -5,129 +5,242 @@ title: Careers
 
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/css/car.css">
+    <title>招聘信息</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <style>
+        body {
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+            margin: 0;
+            background-color: #f8f9fa;
+            color: #333;
+        }
+
+        .header {
+            position: relative;
+            height: 50vh;
+            background-image: url('./assets/img/img003.jpg');
+            background-size: cover;
+            background-position: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            text-align: center;
+            filter: brightness(60%);
+        }
+
+        .header h1 {
+            font-size: 48px;
+            font-weight: bold;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+            font-family: 'Brush Script MT', cursive;
+        }
+
+        .search-bar {
+            margin-top: -30px;
+            margin-bottom: 30px;
+            position: relative;
+            z-index: 1;
+        }
+
+        .job-card {
+            background-color: #ffffff;
+            border: none;
+            border-radius: 15px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s;
+            padding: 20px;
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        .job-card:hover {
+            transform: translateY(-10px);
+        }
+
+        .job-card img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-bottom: 15px;
+        }
+
+        .job-card .card-body {
+            padding: 10px;
+        }
+
+        .job-card .card-title {
+            font-size: 24px;
+            color: #007bff;
+            margin-top: 10px;
+        }
+
+        .job-card .card-text {
+            font-size: 16px;
+            color: #555;
+            margin-bottom: 15px;
+        }
+
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+            transition: background-color 0.3s, border-color 0.3s;
+        }
+
+        .btn-primary:hover {
+            background-color: #0056b3;
+            border-color: #004494;
+        }
+
+        .modal-header {
+            background-color: #007bff;
+            color: white;
+        }
+
+        .modal-body ul {
+            padding-left: 20px;
+        }
+    </style>
 </head>
+
 <body>
 
+    <div class="header">
+        <h1>Glass Factory Job Openings</h1>
+    </div>
 
-<div class="header">
-    <img src="./assets/img/030.png" alt="公司标志">
-    <h1>玻璃厂招聘信息</h1>
-</div>
+    <div class="container">
+        <div class="search-bar text-center">
+            <input type="text" class="form-control form-control-lg" id="search" placeholder="Search for jobs">
+        </div>
 
-<div class="container my-5">
-    <div class="job">
-        <h2>生产操作员</h2>
-        <p>我们正在寻找生产操作员加入我们的玻璃厂团队。</p>
-        <p>要求技能：</p>
-        <ul>
-            <li>具备玻璃制造相关经验者优先</li>
-            <li>能适应轮班工作制度</li>
-            <li>有团队合作精神</li>
-        </ul>
-        <p>联系邮箱: <a href="mailto:hr@example.com">hr@example.com</a></p>
+        <div class="row" id="job-list">
+            <!-- Job listings will be inserted here -->
+        </div>
     </div>
-    <div class="job">
-        <h2>设备维修员</h2>
-        <p>我们需要一位有设备维修经验的维修员加入我们的团队。</p>
-        <p>要求技能：</p>
-        <ul>
-            <li>熟悉工业设备维修和保养</li>
-            <li>有电工证或相关资格证书者优先</li>
-            <li>具备故障诊断和问题解决能力</li>
-        </ul>
-        <p>联系邮箱: <a href="mailto:careers@example.com">careers@example.com</a></p>
-    </div>
-    <div class="job">
-        <h2>质检员</h2>
-        <p>我们正在寻找一名质检员来确保产品质量。</p>
-        <p>要求技能：</p>
-        <ul>
-            <li>熟悉玻璃产品质量标准</li>
-            <li>有质检相关工作经验</li>
-            <li>具备细致的工作态度和责任心</li>
-        </ul>
-        <p>联系邮箱: <a href="mailto:hr@example.com">hr@example.com</a></p>
-    </div>
-    <div class="job">
-        <h2>物流主管</h2>
-        <p>我们需要一位有经验的物流主管来管理我们的物流和供应链。</p>
-        <p>要求技能：</p>
-        <ul>
-            <li>有物流管理经验</li>
-            <li>熟悉物流和供应链管理系统</li>
-            <li>具备良好的沟通和协调能力</li>
-        </ul>
-        <p>联系邮箱: <a href="mailto:logistics@example.com">logistics@example.com</a></p>
-    </div>
-    <div class="job">
-        <h2>仓库管理员</h2>
-        <p>我们正在寻找一名仓库管理员来负责仓库日常运作。</p>
-        <p>要求技能：</p>
-        <ul>
-            <li>有仓库管理经验</li>
-            <li>熟练使用仓库管理软件</li>
-            <li>具备良好的组织和管理能力</li>
-        </ul>
-        <p>联系邮箱: <a href="mailto:warehouse@example.com">warehouse@example.com</a></p>
-    </div>
-    <div class="job">
-        <h2>安全员</h2>
-        <p>我们需要一名安全员来确保工作场所的安全。</p>
-        <p>要求技能：</p>
-        <ul>
-            <li>熟悉安全生产规范和法律法规</li>
-            <li>有安全员资格证书者优先</li>
-            <li>具备应急处理和风险评估能力</li>
-        </ul>
-        <p>联系邮箱: <a href="mailto:safety@example.com">safety@example.com</a></p>
-    </div>
-    <div class="job">
-        <h2>采购员</h2>
-        <p>我们正在寻找一名采购员来负责原材料的采购工作。</p>
-        <p>要求技能：</p>
-        <ul>
-            <li>有采购工作经验</li>
-            <li>熟悉采购流程和供应商管理</li>
-            <li>具备良好的谈判和沟通能力</li>
-        </ul>
-        <p>联系邮箱: <a href="mailto:procurement@example.com">procurement@example.com</a></p>
-    </div>
-    <div class="job">
-        <h2>行政助理</h2>
-        <p>我们需要一名行政助理来协助日常行政工作。</p>
-        <p>要求技能：</p>
-        <ul>
-            <li>有行政管理经验</li>
-            <li>熟练使用办公软件</li>
-            <li>具备良好的沟通和协调能力</li>
-        </ul>
-        <p>联系邮箱: <a href="mailto:admin@example.com">admin@example.com</a></p>
-    </div>
-</div>
 
-<!-- Footer -->
-<footer class="footer bg-dark text-white text-center">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h3>Contact Us</h3>
-        <p>Email: info@celestialglass.com</p>
-        <p>Phone: (123) 456-7890</p>
-        <p>Address: 123 Glass St, Crystal City, CC 12345</p>
-        <p>ICP: ICP 12345678</p>
-      </div>
-    </div>
-  </div>
-</footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+        const jobs = [
+            {
+                title: '生产操作员',
+                description: '我们正在寻找生产操作员加入我们的玻璃厂团队。',
+                skills: ['具备玻璃制造相关经验者优先', '能适应轮班工作制度', '有团队合作精神'],
+                email: 'hr@example.com',
+                img: './assets/img/img006.jpg'
+            },
+            {
+                title: '设备维修员',
+                description: '我们需要一位有设备维修经验的维修员加入我们的团队。',
+                skills: ['熟悉工业设备维修和保养', '有电工证或相关资格证书者优先', '具备故障诊断和问题解决能力'],
+                email: 'careers@example.com',
+                img: './assets/img/img007.jpg'
+            },
+            {
+                title: '质检员',
+                description: '我们正在寻找一名质检员来确保产品质量。',
+                skills: ['熟悉玻璃产品质量标准', '有质检相关工作经验', '具备细致的工作态度和责任心'],
+                email: 'hr@example.com',
+                img: './assets/img/img014.jpg'
+            },
+            {
+                title: '物流主管',
+                description: '我们需要一位有经验的物流主管来管理我们的物流和供应链。',
+                skills: ['有物流管理经验', '熟悉物流和供应链管理系统', '具备良好的沟通和协调能力'],
+                email: 'logistics@example.com',
+                img: './assets/img/img009.jpg'
+            },
+            {
+                title: '仓库管理员',
+                description: '我们正在寻找一名仓库管理员来负责仓库日常运作。',
+                skills: ['有仓库管理经验', '熟练使用仓库管理软件', '具备良好的组织和管理能力'],
+                email: 'warehouse@example.com',
+                img: './assets/img/img010.jpg'
+            },
+            {
+                title: '安全员',
+                description: '我们需要一名安全员来确保工作场所的安全。',
+                skills: ['熟悉安全生产规范和法律法规', '有安全员资格证书者优先', '具备应急处理和风险评估能力'],
+                email: 'safety@example.com',
+                img: './assets/img/img011.jpg'
+            },
+            {
+                title: '采购员',
+                description: '我们正在寻找一名采购员来负责原材料的采购工作。',
+                skills: ['有采购工作经验', '熟悉采购流程和供应商管理', '具备良好的谈判和沟通能力'],
+                email: 'procurement@example.com',
+                img: './assets/img/img012.jpg'
+            },
+            {
+                title: '行政助理',
+                description: '我们需要一名行政助理来协助日常行政工作。',
+                skills: ['有行政管理经验', '熟练使用办公软件', '具备良好的沟通和协调能力'],
+                email: 'admin@example.com',
+                img: './assets/img/img013.jpg'
+            }
+        ];
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        function displayJobs(jobList) {
+            const jobListElement = document.getElementById('job-list');
+            jobListElement.innerHTML = '';
+            jobList.forEach((job, index) => {
+                const jobElement = document.createElement('div');
+                jobElement.className = 'col-md-4';
+                jobElement.innerHTML = `
+                    <div class="card job-card">
+                        <img src="${job.img}" alt="${job.title}">
+                        <div class="card-body">
+                            <h5 class="card-title">${job.title}</h5>
+                            <p class="card-text">${job.description}</p>
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#jobModal${index}">
+                                View Details
+                            </button>
+                        </div>
+                    </div>
+                    
+                    <div class="modal fade" id="jobModal${index}" tabindex="-1" aria-labelledby="jobModalLabel${index}" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="jobModalLabel${index}">${job.title}</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <p>${job.description}</p>
+                                    <p><strong>要求技能：</strong></p>
+                                    <ul>${job.skills.map(skill => `<li>${skill}</li>`).join('')}</ul>
+                                    <p><strong>联系邮箱:</strong> <a href="mailto:${job.email}">${job.email}</a></p>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                `;
+                jobListElement.appendChild(jobElement);
+            });
+        }
+
+        document.getElementById('search').addEventListener('input', (event) => {
+            const searchTerm = event.target.value.toLowerCase();
+            const filteredJobs = jobs.filter(job => job.title.toLowerCase().includes(searchTerm));
+            displayJobs(filteredJobs);
+        });
+
+        displayJobs(jobs);
+    </script>
+
 </body>
+
 </html>
