--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Home
 ---
 
+<!-- Carousel -->
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -51,9 +52,8 @@ title: Home
     <h2 class="text-center mb-4">Our Exquisite Collection</h2>
     <div class="row">
       <div class="col-md-4">
-        <div class="card">
+        <div class="card h-100">
           <img src="./assets/img/024.jpg" class="card-img-top" alt="Wine Glasses">
-          <img src="./assets/img/027.png" class="card-img-top" alt="Wine Glasses">
           <div class="card-body">
             <h5 class="card-title">Wine Glasses</h5>
             <p class="card-text">Elevate your wine experience.</p>
@@ -62,7 +62,7 @@ title: Home
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card">
+        <div class="card h-100">
           <img src="./assets/img/025.jpg" class="card-img-top" alt="Beer Mugs">
           <div class="card-body">
             <h5 class="card-title">Beer Mugs</h5>
@@ -72,7 +72,7 @@ title: Home
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card">
+        <div class="card h-100">
           <img src="./assets/img/026.jpg" class="card-img-top" alt="Cocktail Glasses">
           <div class="card-body">
             <h5 class="card-title">Cocktail Glasses</h5>
@@ -89,8 +89,7 @@ title: Home
   <div class="container text-center">
     <h2 class="mb-4">About Us</h2>
     <p class="lead">Established in 2021, Celestial Glass Artisans is committed to bringing you quality glassware. Our passion and dedication have made us a leader in the industry.</p>
-    <a href="about.html" class="btn
-    btn-primary">Learn More</a>
+    <a href="about.html" class="btn btn-primary">Learn More</a>
   </div>
 </div>
 
@@ -99,7 +98,7 @@ title: Home
     <h2 class="text-center mb-4">Latest News</h2>
     <div class="row">
       <div class="col-md-4">
-        <div class="card">
+        <div class="card h-100">
           <div class="card-body">
             <h5 class="card-title">New Product Launch</h5>
             <p class="card-text">Introducing our latest collection of wine glasses. Explore now!</p>
@@ -107,7 +106,7 @@ title: Home
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card">
+        <div class="card h-100">
           <div class="card-body">
             <h5 class="card-title">Company Event</h5>
             <p class="card-text">Join us for our annual glassware exhibition. Learn more.</p>
@@ -115,7 +114,7 @@ title: Home
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card">
+        <div class="card h-100">
           <div class="card-body">
             <h5 class="card-title">Job Opportunities</h5>
             <p class="card-text">We're hiring! Check out our current job openings.</p>
@@ -129,14 +128,20 @@ title: Home
 <!-- Footer -->
 <footer class="footer bg-dark text-white">
   <div class="container text-center">
-    <div class="row">
-      <div class="col-md-4 offset-md-4">
+    <div class="row justify-content-center">
+      <div class="col-md-4">
         <h3>Contact Us</h3>
         <p><i class="fas fa-envelope"></i> Email: info@celestialglass.com</p>
         <p><i class="fas fa-phone"></i> Phone: (123) 456-7890</p>
         <p><i class="fas fa-map-marker-alt"></i> Address: 123 Main St, City, Country</p>
         <p>备案号: XXXXXXXXX</p>
+        <div class="social-icons">
+          <a href="about.html" class="text-white"><i class="fab fa-facebook fa-2x mx-3"></i></a>
+          <a href="about.html" class="text-white"><i class="fab fa-twitter fa-2x mx-3"></i></a>
+          <a href="about.html" class="text-white"><i class="fab fa-instagram fa-2x mx-3"></i></a>
+        </div>
       </div>
     </div>
   </div>
 </footer>
+
