--- a/products.html
+++ b/products.html
@@ -5,104 +5,120 @@ title: Products
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ page.title }}</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./assets/css/pro.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ page.title }}</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/pro.css">
+    <link rel="stylesheet" href="./assets/css/lightbox.min.css"> <!-- Lightbox2 CSS -->
 </head>
 
 <body>
-<div class="container mt-5 pt-5">
-  <h2 class="text-center mb-4">Our Exquisite Collection</h2>
-  <div class="row">
-    <div class="col-md-4">
-      <div class="card mb-4">
-        <img src="./assets/img/024.jpg" class="card-img-top fixed-size" alt="Product 1">
-        <div class="card-body">
-          <h5 class="card-title">Product 1</h5>
-          <p class="card-text">Price: $20</p>
-          <p class="card-text">Description: Elegant wine glass, perfect for any occasion.</p>
-          <a href="#" class="btn btn-primary">Buy Now</a>
+    <div class="container mt-5 pt-5">
+        <h2 class="text-center mb-4">Our Exquisite Collection</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <a href="./assets/img/024.jpg" data-lightbox="product" data-title="Product 1">
+                        <img src="./assets/img/024.jpg" class="card-img-top fixed-size" alt="Product 1">
+                    </a>
+                    <div class="card-body">
+                        <h5 class="card-title">Product 1</h5>
+                        <p class="card-text">Price: $20</p>
+                        <p class="card-text">Elegant wine glass, perfect for any occasion.</p>
+                        <a href="#" class="btn btn-primary">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <a href="./assets/img/025.jpg" data-lightbox="product" data-title="Product 2">
+                        <img src="./assets/img/025.jpg" class="card-img-top fixed-size" alt="Product 2">
+                    </a>
+                    <div class="card-body">
+                        <h5 class="card-title">Product 2</h5>
+                        <p class="card-text">Price: $25</p>
+                        <p class="card-text">Sturdy beer mug, ideal for all beverages.</p>
+                        <a href="#" class="btn btn-primary">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <a href="./assets/img/026.jpg" data-lightbox="product" data-title="Product 3">
+                        <img src="./assets/img/026.jpg" class="card-img-top fixed-size" alt="Product 3">
+                    </a>
+                    <div class="card-body">
+                        <h5 class="card-title">Product 3</h5>
+                        <p class="card-text">Price: $30</p>
+                        <p class="card-text">Artistic cocktail glass, ideal for creative drinks.</p>
+                        <a href="#" class="btn btn-primary">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <a href="./assets/img/009.png" data-lightbox="product" data-title="Product 4">
+                        <img src="./assets/img/009.png" class="card-img-top fixed-size" alt="Product 4">
+                    </a>
+                    <div class="card-body">
+                        <h5 class="card-title">Product 4</h5>
+                        <p class="card-text">Price: $22</p>
+                        <p class="card-text">Classic tumbler, perfect for all beverages.</p>
+                        <a href="#" class="btn btn-primary">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <a href="./assets/img/029.png" data-lightbox="product" data-title="Product 5">
+                        <img src="./assets/img/029.png" class="card-img-top fixed-size" alt="Product 5">
+                    </a>
+                    <div class="card-body">
+                        <h5 class="card-title">Product 5</h5>
+                        <p class="card-text">Price: $28</p>
+                        <p class="card-text">Modern highball glass, for stylish drinks.</p>
+                        <a href="#" class="btn btn-primary">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <a href="./assets/img/021.png" data-lightbox="product" data-title="Product 6">
+                        <img src="./assets/img/021.png" class="card-img-top fixed-size" alt="Product 6">
+                    </a>
+                    <div class="card-body">
+                        <h5 class="card-title">Product 6</h5>
+                        <p class="card-text">Price: $35</p>
+                        <p class="card-text">Decorative vase, a perfect centerpiece.</p>
+                        <a href="#" class="btn btn-primary">Buy Now</a>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-    <div class="col-md-4">
-      <div class="card mb-4">
-        <img src="./assets/img/025.jpg" class="card-img-top fixed-size" alt="Product 2">
-        <div class="card-body">
-          <h5 class="card-title">Product 2</h5>
-          <p class="card-text">Price: $25</p>
-          <p class="card-text">Description: Sturdy beer mug, ideal for all beverages.</p>
-          <a href="#" class="btn btn-primary">Buy Now</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card mb-4">
-        <img src="./assets/img/026.jpg" class="card-img-top fixed-size" alt="Product 3">
-        <div class="card-body">
-          <h5 class="card-title">Product 3</h5>
-          <p class="card-text">Price: $30</p>
-          <p class="card-text">Description: Artistic cocktail glass, ideal for creative drinks.</p>
-          <a href="#" class="btn btn-primary">Buy Now</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card mb-4">
-        <img src="./assets/img/009.png" class="card-img-top fixed-size" alt="Product 4">
-        <div class="card-body">
-          <h5 class="card-title">Product 4</h5>
-          <p class="card-text">Price: $22</p>
-          <p class="card-text">Description: Classic tumbler, perfect for all beverages.</p>
-          <a href="#" class="btn btn-primary">Buy Now</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card mb-4">
-        <img src="./assets/img/029.png" class="card-img-top fixed-size" alt="Product 5">
-        <div class="card-body">
-          <h5 class="card-title">Product 5</h5>
-          <p class="card-text">Price: $28</p>
-          <p class="card-text">Description: Modern highball glass, for stylish drinks.</p>
-          <a href="#" class="btn btn-primary">Buy Now</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card mb-4">
-        <img src="./assets/img/021.png" class="card-img-top fixed-size" alt="Product 6">
-        <div class="card-body">
-          <h5 class="card-title">Product 6</h5>
-          <p class="card-text">Price: $35</p>
-          <p class="card-text">Description: Decorative vase, a perfect centerpiece.</p>
-          <a href="#" class="btn btn-primary">Buy Now</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
-<!-- Footer -->
-<footer class="footer bg-dark text-white text-center">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h3>Contact Us</h3>
-        <p>Email: info@celestialglass.com</p>
-        <p>Phone: (123) 456-7890</p>
-        <p>Address: 123 Glass St, Crystal City, CC 12345</p>
-        <p>ICP: ICP 12345678</p>
-      </div>
-    </div>
-  </div>
-</footer>
+    <!-- Footer -->
+    <footer class="footer bg-dark text-white text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3>Contact Us</h3>
+                    <p>Email: info@celestialglass.com</p>
+                    <p>Phone: (123) 456-7890</p>
+                    <p>Address: 123 Glass St, Crystal City, CC 12345</p>
+                    <p>ICP: ICP 12345678</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="./assets/js/lightbox.min.js"></script> <!-- Lightbox2 JS -->
 </body>
+
 </html>
