--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@ title: Contact
                 <div class="inner-content">
                     <h2>Contact Us</h2>
                     <span>Awesome, clean & creative HTML5 Template</span>
-                    <img src="./assets/css/img/about-us-page-heading.jpg" alt="About Us" style="width:100%; height:auto;">
+                    <img src="./assets/img/about-us-page-heading.jpg" alt="About Us" style="width:100%; height:auto;">
                 </div>
             </div>
         </div>
@@ -35,7 +35,7 @@ title: Contact
         <div class="row">
             <div class="col-lg-6">
                 <div id="image-area">
-                    <img src="./assets/css/img/map.jpg" alt="Location Map" style="width:100%; height:auto;">
+                    <img src="./assets/img/map.jpg" alt="Location Map" style="width:100%; height:auto;">
                 </div>
             </div>
             <div class="col-lg-6">
