--- a/contact.html
+++ b/contact.html
@@ -14,19 +14,11 @@ title: Contact
 <body>
 
 <!-- ***** Main Banner Area Start ***** -->
-<div class="page-heading about-page-heading" id="top">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="inner-content">
-                    <h2>Contact Us</h2>
-                    <span>Awesome, clean & creative HTML5 Template</span>
-                    <img src="./assets/img/about-us-page-heading.jpg" alt="About Us" style="width:100%; height:auto;">
-                </div>
-            </div>
-        </div>
-    </div>
+<div class="welcome-area">
+  <img src="assets/img/about-us-page-heading.jpg" alt="Elegant Glassware" class="full-width">
+  <p class="welcome-message">Contact us</p>
 </div>
+
 <!-- ***** Main Banner Area End ***** -->
 
 <!-- ***** Contact Area Starts ***** -->
