--- a/contact.html
+++ b/contact.html
@@ -66,15 +66,20 @@ title: Contact
 <!-- ***** Contact Area Ends ***** -->
 
 <!-- Footer -->
-<footer class="footer bg-dark text-white text-center">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
+<footer class="footer bg-dark text-white">
+  <div class="container text-center">
+    <div class="row justify-content-center">
+      <div class="col-md-4">
         <h3>Contact Us</h3>
-        <p>Email: info@celestialglass.com</p>
-        <p>Phone: (123) 456-7890</p>
-        <p>Address: 123 Glass St, Crystal City, CC 12345</p>
-        <p>ICP: ICP 12345678</p>
+        <p><i class="fas fa-envelope"></i> Email: info@celestialglass.com</p>
+        <p><i class="fas fa-phone"></i> Phone: (123) 456-7890</p>
+        <p><i class="fas fa-map-marker-alt"></i> Address: 123 Main St, City, Country</p>
+        <p>备案号: XXXXXXXXX</p>
+        <div class="social-icons">
+          <a href="about.html" class="text-white"><i class="fab fa-facebook fa-2x mx-3"></i></a>
+          <a href="about.html" class="text-white"><i class="fab fa-twitter fa-2x mx-3"></i></a>
+          <a href="about.html" class="text-white"><i class="fab fa-instagram fa-2x mx-3"></i></a>
+        </div>
       </div>
     </div>
   </div>
