--- a/about.html
+++ b/about.html
@@ -1,10 +1,6 @@
----
-layout: default
-title: About
----
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,42 +8,124 @@ title: About
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="./assets/css/about.css">
 </head>
-<!-- 欢迎区域 -->
-<div class="welcome-area">
+
+<body>
+
+  <!-- 欢迎区域 -->
+  <div class="welcome-area">
     <img src="assets/img/full-width-image.jpg" alt="Elegant Glassware" class="full-width">
     <p class="welcome-message">About Our Company</p>
-</div>
+  </div>
 
-<!-- 公司介绍区域 -->
-<div class="company-introduction">
+  <!-- 公司介绍区域 -->
+  <div class="company-introduction">
     <div class="image-left">
-        <img src="assets/img/center-left-image.jpg" alt="Our Craftsmen at Work">
+      <img src="assets/img/center-left-image.jpg" alt="Our Craftsmen at Work">
     </div>
     <div class="text-right">
-        <h2>About us</h2>
-        <p>Since 1919, we have been committed to creating unparalleled glass products. Our mission is to enhance the quality and beauty of life through continuous innovation and exquisite craftsmanship.</p>
+      <h2>About us</h2>
+      <p>Since 1919, we have been committed to creating unparalleled glass products. Our mission is to enhance the
+        quality and beauty of life through continuous innovation and exquisite craftsmanship.</p>
     </div>
-</div>
+  </div>
 
-
-
-<!-- Footer -->
-<footer class="footer bg-dark text-white text-center">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h3>Contact Us</h3>
-        <p>Email: info@celestialglass.com</p>
-        <p>Phone: (123) 456-7890</p>
-        <p>Address: 123 Glass St, Crystal City, CC 12345</p>
-        <p>ICP: ICP 12345678</p>
+  <!-- 团队成员介绍区域 -->
+  <div class="team-members">
+    <div class="container">
+      <h2 class="text-center">Meet Our Team</h2>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <img src="assets/img/101.jpeg" class="card-img-top" alt="Member 1">
+            <div class="card-body text-center">
+              <h5 class="card-title">John Doe</h5>
+              <p class="card-text">Lead Designer</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img src="assets/img/102.jpeg" class="card-img-top" alt="Member 2">
+            <div class="card-body text-center">
+              <h5 class="card-title">Jane Smith</h5>
+              <p class="card-text">CEO</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img src="assets/img/103.jpeg" class="card-img-top" alt="Member 3">
+            <div class="card-body text-center">
+              <h5 class="card-title">Michael Brown</h5>
+              <p class="card-text">Lead Developer</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</footer>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <!-- 时间线标题区域 -->
+  <div class="timeline-title-area text-center">
+    <h2>TIMELINE</h2>
+  </div>
+
+  <!-- 时间线区域 -->
+  <div class="timeline">
+    <div class="container">
+      <div class="timeline-container left">
+        <div class="content">
+          <h3>2016-2020</h3>
+          <p>During this period, the company has been committed to establishing its own brand image and market position.
+            Through
+            continuous research and innovation, the company has launched a series of uniquely designed and high-quality
+            glass cup
+            products to meet the growing needs of consumers.</p>
+        </div>
+      </div>
+      <div class="timeline-container right">
+        <div class="content">
+          <h3>2020-2023</h3>
+          <p>As consumer demand for environmentally friendly products continues to increase, the company will shift its
+            focus to
+            sustainable development and environmental protection concepts. The company has started researching and
+            producing
+            environmentally friendly glass cups made from recycled glass materials, and gradually phased out the
+            traditional
+            disposable plastic cup product line.</p>
+        </div>
+      </div>
+      <div class="timeline-container left">
+        <div class="content">
+          <h3>2024</h3>
+          <p>In 2024, the company has become one of the leading enterprises in the field of environmentally friendly
+            glass cups. The
+            company continuously innovates and launches more product lines that meet market demand, including customized
+            services
+            and personalized designs, to meet the needs of different customer groups.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <footer class="footer bg-dark text-white text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h3>Contact Us</h3>
+          <p>Email: info@celestialglass.com</p>
+          <p>Phone: (123) 456-7890</p>
+          <p>Address: 123 Glass St, Crystal City, CC 12345</p>
+          <p>ICP: ICP 12345678</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
