--- a/about.html
+++ b/about.html
@@ -1,3 +1,8 @@
+---
+layout: default
+title: Careers
+---
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -14,7 +19,7 @@
   <!-- 欢迎区域 -->
   <div class="welcome-area">
     <img src="assets/img/full-width-image.jpg" alt="Elegant Glassware" class="full-width">
-    <p class="welcome-message">About Our Company</p>
+    <p class="welcome-message">ABOUT OUR COMPANY</p>
   </div>
 
   <!-- 公司介绍区域 -->
@@ -24,7 +29,7 @@
     </div>
     <div class="text-right">
       <h2>About us</h2>
-      <p>Since 1919, we have been committed to creating unparalleled glass products. Our mission is to enhance the
+      <p>Since 2016, we have been committed to creating unparalleled glass products. Our mission is to enhance the
         quality and beauty of life through continuous innovation and exquisite craftsmanship.</p>
     </div>
   </div>
