--- a/culture.html
+++ b/culture.html
@@ -1,148 +1,113 @@
 ---
 layout: default
-title: Cuture
+title: Culture
 ---
 
-<br>
-<br>
-<br>
-<br>
+<link rel="stylesheet" href="./assets/css/cul.css">
 
-<div class="input-group mb-3">
-  <div class="input-group-prepend">
-    <button class="btn btn-outline-secondary" type="button">Basic Button</button>
-  </div>
-  <input type="text" class="form-control" placeholder="Give your advice!">
-</div>
-
-<div class="input-group mb-3">
-  <input type="text" class="form-control" placeholder="Search">
-  <div class="input-group-append">
-    <button class="btn btn-success" type="submit">Go</button>
-  </div>
-</div>
-
-<div class="input-group mb-3">
-  <input type="text" class="form-control" placeholder="Something clever..">
-  <div class="input-group-append">
-    <button class="btn btn-primary" type="button">OK</button>
-    <button class="btn btn-danger" type="button">Cancel</button>
-  </div>
-</div>
-
-
-<!-- 改 -->
-<div class="container">
-  <div class="card" style="width: 800px">
-    <img class="card-img-top" src="assets/img/008.png" alt="Card image">
-    <div class="card-body" style="display: flex; flex-direction: row;">
-      <h4 class="card-title">Quality first. </h4>
-      <p class="card-text"></p>
-      <a href="#" class="btn btn-primary" style="align-self: flex-end;">See Profile</a>
-    </div>
-  </div>
-
-  <div class="content">
-    <h1>品质第一</h1>
-    <p>我们始终致力于生产出精美优质的玻璃杯，追求卓越品质是我们的宗旨</p>
-    <pre>
-      在追求品质卓越的路上，我们不断审视生产工艺，精细雕琢每一款玻璃杯，让每一杯背后都是精湛技艺与匠心独运的体现。
-
-    </pre>
-  </div>
-</div>
-
-
-<div class="container">
-  <div class="card" style="width: 800px">
-    <img class="card-img-top" src="assets/img/007.png" alt="Card image">
-    <div class="card-body" style="display: flex; flex-direction: row;">
-      <h4 class="card-title">Innovative spirit. </h4>
-      <p class="card-text"></p>
-      <a href="#" class="btn btn-primary" style="align-self: flex-end;">See Profile</a>
-    </div>
-  </div>
-
-  <div class="content">
-    <h1>创新精神</h1>
-    <p>我们鼓励员工积极思考，不断创新，为公司带来新的灵感和机遇。</p>
-    <pre>
-      创新不只是一种态度，更是我们持续发展的动力。我们鼓励员工突破传统思维，勇于尝试，敢于创新，为公司开拓更广阔的发展空间。
-    </pre>
-  </div>
+<div class="welcome-area">
+  <img src="assets/img/img004.jpg" alt="Elegant Glassware">
+  <p class="welcome-message">Our Culture</p>
+  <p class="welcome-description">At Celestial Glass Artisans, we embrace a culture of quality, innovation, teamwork, customer-first, and social responsibility. Join us on a journey where craftsmanship meets passion.</p>
 </div>
 
 <div class="container">
-  <div class="card" style="width: 800px">
-    <img class="card-img-top" src="assets/img/012.jpg" Card image">
-    <div class="card-body" style="display: flex; flex-direction: row;">
-      <h4 class="card-title">Teamwork. </h4>
-      <p class="card-text"></p>
-      <a href="#" class="btn btn-primary" style="align-self: flex-end;">See Profile</a>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="card card-custom">
+        <img class="card-img-top card-img-custom" src="assets/img/008.png" alt="Quality First">
+        <div class="card-body">
+          <h4 class="card-title">Quality First</h4>
+          <p class="card-text">我们始终致力于生产出精美优质的玻璃杯，追求卓越品质是我们的宗旨。</p>
+          <pre class="pre-text">在追求品质卓越的路上，我们不断审视生产工艺，精细雕琢每一款玻璃杯，让每一杯背后都是精湛技艺与匠心独运的体现。</pre>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-6">
+      <div class="card card-custom">
+        <img class="card-img-top card-img-custom" src="assets/img/007.png" alt="Innovative Spirit">
+        <div class="card-body">
+          <h4 class="card-title">Innovative Spirit</h4>
+          <p class="card-text">我们鼓励员工积极思考，不断创新，为公司带来新的灵感和机遇。</p>
+          <pre class="pre-text">创新不只是一种态度，更是我们持续发展的动力。我们鼓励员工突破传统思维，勇于尝试，敢于创新，为公司开拓更广阔的发展空间。</pre>
+        </div>
+      </div>
     </div>
   </div>
 
-  <div class="content">
-    <h1>团队合作</h1>
-    <p>我们重视团队合作和互助精神，相互支持，共同成长。</p>
-    <pre>
-      在我们的团队中，没有个人英雄，只有团队伙伴。我们相互信任，共同努力，携手前行，实现自己的梦想和公司的目标。
-    </pre>
-  </div>
-</div>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="card card-custom">
+        <img class="card-img-top card-img-custom" src="assets/img/012.jpg" alt="Teamwork">
+        <div class="card-body">
+          <h4 class="card-title">Teamwork</h4>
+          <p class="card-text">我们重视团队合作和互助精神，相互支持，共同成长。</p>
+          <pre class="pre-text">在我们的团队中，没有个人英雄，只有团队伙伴。我们相互信任，共同努力，携手前行，实现自己的梦想和公司的目标。</pre>
+        </div>
+      </div>
+    </div>
 
-
-<div class="container">
-  <div class="card" style="width: 800px">
-    <img class="card-img-top" src="assets/img/020.png" alt="Card image">
-    <div class="card-body" style="display: flex; flex-direction: row;">
-      <h4 class="card-title">The customer comes first. </h4>
-      <p class="card-text"></p>
-      <a href="#" class="btn btn-primary" style="align-self: flex-end;">See Profile</a>
+    <div class="col-md-6">
+      <div class="card card-custom">
+        <img class="card-img-top card-img-custom" src="assets/img/020.png" alt="Customer First">
+        <div class="card-body">
+          <h4 class="card-title">Customer First</h4>
+          <p class="card-text">我们尊重客户需求，倾听客户意见，努力为客户提供满意的服务和产品。</p>
+          <pre class="pre-text">客户的需求和满意是我们工作的终极目标。我们倾听客户的声音，不断优化产品和服务，真诚对待每一位客户，为他们提供超出期待的体验。</pre>
+        </div>
+      </div>
     </div>
   </div>
 
-  <div class="content">
-    <h1>客户至上</h1>
-    <p>我们尊重客户需求，倾听客户意见，努力为客户提供满意的服务和产品。</p>
-    <pre>
-      客户的需求和满意是我们工作的终极目标。我们倾听客户的声音，不断优化产品和服务，真诚对待每一位客户，为他们提供超出期待的体验。
-    </pre>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="card card-custom">
+        <img class="card-img-top card-img-custom" src="assets/img/013.jpg" alt="Social Responsibility">
+        <div class="card-body">
+          <h4 class="card-title">Social Responsibility</h4>
+          <p class="card-text">
+            我们秉承着环保理念，致力于减少对环境的影响，积极参与公益事业。
+            <br>
+            环保责任不只是我们的使命，更是我们对子孙后代的承诺。我们致力于绿色制造，倡导循环利用，努力降低生产对环境的负面影响。
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-6">
+      <div class="card card-custom">
+        <img class="card-img-top card-img-custom" src="assets/img/img005.jpg" alt="Our Culture">
+        <div class="card-body">
+          <h4 class="card-title">Our Culture</h4>
+          <ul class="list-unstyled card-text">
+            <li><strong>激励奖励：</strong> 注重激励员工的表现和成就，提供丰厚的奖励和晋升机会；</li>
+            <li><strong>共同成长：</strong> 鼓励员工与公司共同成长，共享成功的喜悦；</li>
+            <li><strong>诚信守责：</strong> 强调诚信和守责的价值观，遵守法律法规，信守承诺；</li>
+            <li><strong>开放包容：</strong> 倡导开放和包容的文化氛围，尊重多样性。</li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
-
-
-<div class="card">
-  <div class="card-body">
-    <h4 class="card-title">社会责任</h4>
-    <p class="card-text">
-      我们秉承着环保理念，致力于减少对环境的影响，积极参与公益事业。
-      <br>
-      环保责任不只是我们的使命，更是我们对子孙后代的承诺。我们致力于绿色制造，倡导循环利用，努力降低生产对环境的负面影响。
-    </p>
-    <a href="#" class="card-link">Card link</a>
-    <a href="#" class="card-link">Another link</a>
+<!-- Footer -->
+<footer class="footer bg-dark text-white mt-4">
+  <div class="container text-center">
+    <div class="row justify-content-center">
+      <div class="col-md-4">
+        <h3>Contact Us</h3>
+        <p><i class="fas fa-envelope"></i> Email: info@celestialglass.com</p>
+        <p><i class="fas fa-phone"></i> Phone: (123) 456-7890</p>
+        <p><i class="fas fa-map-marker-alt"></i> Address: 123 Main St, City, Country</p>
+        <p>备案号: XXXXXXXXX</p>
+        <div class="social-icons">
+          <a href="about.html" class="text-white"><i class="fab fa-facebook fa-2x mx-3"></i></a>
+          <a href="about.html" class="text-white"><i class="fab fa-twitter fa-2x mx-3"></i></a>
+          <a href="about.html" class="text-white"><i class="fab fa-instagram fa-2x mx-3"></i></a>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
-
-
-<div class="card">
-  <div class="card-body">
-    <h4 class="card-title">culture...</h4>
-    <p class="card-text">
-      激励奖励：我们注重激励员工的表现和成就，提供丰厚的奖励和晋升机会，激发员工的工作激情和创造力。
-      <br>
-      共同成长：我们秉承着共同成长的理念，公司的成功离不开每一位员工的努力和贡献，我们鼓励员工与公司同心同德，共享成功的喜悦。
-      <br>
-      诚信守责：我们强调诚信和守责的价值观，遵守法律法规，信守承诺，保持诚实和透明的做事态度。
-      <br>
-      学习进步：我们提倡学习和进步，鼓励员工不断学习和自我提升，不断完善自己，与公司共同成长。
-      <br>
-      开放包容：我们倡导开放和包容的文化氛围，尊重多样性，欢迎不同观点和想法的交流，推动公司的创新和进步。
-
-    </p>
-    <a href="#" class="card-link">Card link</a>
-    <a href="#" class="card-link">Another link</a>
-  </div>
-</div>
+</footer>
